# VCFgenetics

./: .gitignore  README.md  STATUS.md  pyproject.toml
scripts/: fetch_clinvar_snapshots.py
src/vcfgenetics_monitor/: bcftools.py  cli.py  clinvar.py  compare.py  ingest.py  models.py  normalize.py  snapshot.py  store.py  vrs.py
tests/: test_spec.py
tests/fixtures/: GRCh38_micro.fa  GRCh38_micro.fa.fai  clinvar_new.vcf  clinvar_old.vcf  clinvar_positive_control.vcf  watchlist.vcf  watchlist_diff.vcf
